--- a/public/logout.html
+++ b/public/logout.html
@@ -22,12 +22,12 @@
         integrity="sha512-RNLkV3d+aLtfcpEyFG8jRbnWHxUqVZozacROI4J2F1sTaDqo1dPQYs01OMi1t1w9Y2FdbSCDSQ2ZVdAC8bzgAg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <div class="col-md-4 mx-auto">
-    <div class="card text-center">
-      <div class="card-header" >
+  <div >
+    <div>
+      <div >
         <h3>Hasta luego <span id = "nameUser"></span></h3>
       </div>
-      <div class="card-body">
+      <div>
 
   
       </div>
